@startuml schema_relationnel
' Style commun — diagrammes ElevConnect
skinparam backgroundColor #FFFFFF
skinparam dpi 180
skinparam shadowing false
skinparam roundcorner 12
skinparam linetype ortho
skinparam defaultFontName SansSerif
skinparam defaultFontSize 22
skinparam TitleFontName SansSerif
skinparam TitleFontSize 28
skinparam TitleFontColor #17324D
skinparam ArrowColor #456A7D
skinparam ArrowFontColor #29485B
skinparam ArrowThickness 1.4
skinparam NoteBackgroundColor #FFF8E8
skinparam NoteBorderColor #E5AE45
skinparam NoteFontColor #5B481E
skinparam PackageBorderColor #9AB7A7
skinparam PackageBackgroundColor #F4FAF6
skinparam PackageFontColor #1F5B43
skinparam PackageFontStyle bold
skinparam ActivityBackgroundColor #F0F8F3
skinparam ActivityBorderColor #2F7D5B
skinparam ActivityFontColor #17324D
skinparam ActivityDiamondBackgroundColor #FFF3D8
skinparam ActivityDiamondBorderColor #D8952F
skinparam ActivityBarColor #2F7D5B
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassBorderColor #2F7D5B
skinparam ClassHeaderBackgroundColor #E4F3EA
skinparam ClassFontColor #17324D
skinparam EntityBackgroundColor #FFFFFF
skinparam EntityBorderColor #2F7D5B
skinparam EntityFontColor #17324D
skinparam StateBackgroundColor #EDF7F1
skinparam StateBorderColor #2F7D5B
skinparam StateFontColor #17324D
skinparam UsecaseBackgroundColor #EAF4F8
skinparam UsecaseBorderColor #3E7490
skinparam UsecaseFontColor #17324D
skinparam SequenceLifeLineBorderColor #9CB4C1
skinparam SequenceLifeLineBackgroundColor #FFFFFF
skinparam SequenceParticipantBackgroundColor #EAF4F8
skinparam SequenceParticipantBorderColor #3E7490
skinparam SequenceActorBackgroundColor #FFFFFF
skinparam SequenceActorBorderColor #2F7D5B
skinparam SequenceGroupBackgroundColor #F7FBFD
skinparam SequenceGroupBorderColor #9CB4C1
skinparam nodesep 12
skinparam ranksep 15
skinparam ActivityMargin 5
skinparam ActivityPadding 4
skinparam ParticipantPadding 10
skinparam BoxPadding 4
skinparam Padding 2
skinparam StatePadding 4

top to bottom direction
title Schéma relationnel — tables principales

package "Utilisateurs" {
  entity "UTILISATEURS" as USER {
    * id_utilisateur <<PK>>
    --
    email <<UQ>>
    role
    statut
  }
}

package "Catalogue" {
  entity "ANNONCES" as ANN {
    * id_annonce <<PK>>
    --
    id_utilisateur <<FK>>
    prix_unitaire
    quantite
    statut
  }
  entity "REDUCTIONS_ANNONCE" as RED {
    * id_reduction <<PK>>
    --
    id_annonce <<FK>>
    quantite_min
    pourcentage
  }
}

package "Vente & livraison" {
  entity "COMMANDES" as CMD {
    * id_commande <<PK>>
    --
    id_annonce <<FK>>
    id_utilisateur <<FK>>
    montant_net
    mode_retrait
    statut
  }
  entity "PAIEMENTS" as PAY {
    * id_paiement <<PK>>
    --
    id_commande <<FK, UQ>>
    total_general
    statut
  }
  entity "LIVRAISONS" as DEL {
    * id_livraison <<PK>>
    --
    id_commande <<FK, UQ>>
    id_livreur <<FK>>
    statut
    verification_qr
  }
  entity "VERSEMENTS" as SETTLE {
    * id_versement <<PK>>
    --
    id_paiement <<FK>>
    id_beneficiaire <<FK>>
    montant
    statut
  }
}

package "Services vétérinaires" {
  entity "SERVICES_VETERINAIRES" as SERVICE {
    * id_service <<PK>>
    --
    id_veterinaire <<FK>>
    titre
    prix
  }
  entity "RENDEZ_VOUS" as APPT {
    * id_rdv <<PK>>
    --
    id_service <<FK>>
    id_eleveur <<FK>>
    date_prevue
    statut
  }
}

package "Communication" {
  entity "NOTIFICATIONS" as NOTIF {
    * id_notification <<PK>>
    --
    id_utilisateur <<FK>>
    contenu
    lu
  }
}

USER ||--o{ ANN : publie
ANN ||--o{ RED : applique
USER ||--o{ CMD : passe
ANN ||--o{ CMD : concerne
CMD ||--o| PAY : règle
CMD ||--o| DEL : livraison optionnelle
USER |o--o{ DEL : livre
PAY ||--o{ SETTLE : déclenche
USER ||--o{ SETTLE : reçoit
USER ||--o{ SERVICE : propose
SERVICE ||--o{ APPT : concerne
USER ||--o{ APPT : demande
USER ||--o{ NOTIF : reçoit

legend right
  |= Abréviation |= Signification |
  | PK | clé primaire |
  | FK | clé étrangère |
  | UQ | valeur unique |
endlegend
@enduml